corrected z-index for smaller resolutions

--- a/src/plugins/navigation/vanilla-tagger-navigation.css
+++ b/src/plugins/navigation/vanilla-tagger-navigation.css
@@ -15,11 +15,11 @@
 }
 
 .vtagger-imgcontainer {
-  z-index: 1;
+  z-index: 2;
 }
 
 .vtagger-navcontainer {
-  z-index: 2;
+  z-index: 1;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -148,6 +148,7 @@
   }
 
   .vtagger-navcontainer {
+    z-index: 3;
     max-width: 300px;
     padding: 0 0 15px 0;
     box-shadow: unset;
